--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ fastapi==0.100.1
 ffmpy==0.3.1
 filelock==3.12.2
 fire==0.5.0
-flash-attn==2.0.4
+flash-attn
 Flask==2.3.3
 flask-babel==3.1.0
 flywheel==0.5.4
@@ -134,7 +134,7 @@ nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 omegaconf==2.3.0
 open-clip-torch==2.20.0
-open-flamingo==2.0.0
+# open-flamingo==2.0.0
 openai==0.27.9
 opencv-contrib-python==4.6.0.66
 opencv-python==4.6.0.66
@@ -208,12 +208,12 @@ rich==13.5.2
 rpds-py==0.9.2
 s3transfer==0.6.2
 safetensors==0.3.1
-salesforce-lavis==1.0.2
+# salesforce-lavis==1.0.2
 scikit-image==0.21.0
 scikit-learn==1.2.2
 scipy==1.11.1
 semantic-version==2.10.0
-sentencepiece==0.1.99
+sentencepiece
 sentry-sdk==1.29.2
 setproctitle==1.3.2
 shapely==2.0.1
@@ -240,7 +240,7 @@ threadpoolctl==3.2.0
 tifffile==2023.7.18
 tight==0.1.0
 tiktoken==0.4.0
-timm==0.6.13
+timm
 tokenizers==0.13.3
 toml==0.10.2
 toolz==0.12.0
@@ -249,7 +249,7 @@ torchvision==0.15.2
 tornado==6.3.2
 tqdm==4.65.0
 traitlets==5.9.0
-transformers==4.29.0
+transformers
 triton==2.0.0
 typer==0.9.0
 typing_extensions==4.7.1
