--- a/requirements.txt
+++ b/requirements.txt
@@ -144,10 +144,10 @@ openpyxl==3.1.2
 opt-einsum==3.3.0
 orjson==3.9.2
 packaging==23.1
-paddle==1.0.2
-paddle-bfloat==0.1.7
-paddleocr==2.7.0.2
-paddlepaddle==2.5.1
+# paddle==1.0.2
+# paddle-bfloat==0.1.7
+# paddleocr==2.7.0.2
+# paddlepaddle==2.5.1
 pandas==2.0.3
 parso==0.8.3
 pathtools==0.1.2
@@ -185,7 +185,7 @@ pydeck==0.8.0
 pydub==0.25.1
 Pygments==2.15.1
 Pympler==1.0.1
-PyMuPDF==1.20.2
+# PyMuPDF==1.20.2
 pyparsing==3.0.9
 pypdfium2==4.18.0
 PySocks==1.7.1
